--- a/setup.cfg
+++ b/setup.cfg
@@ -140,7 +140,7 @@ include =
 
 [options.entry_points]
 console_scripts =
-  robotmesh-vex = abm.cli:abm_cli
+  abm = abm.cli:abm_cli
 
 
 [options.extras_require]
