--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.rulers": [79],
 
   "files.exclude": {
+    "dist": true,
     "**/*.egg-info": true,
     "**/.git": true,
     "**/.mypy_cache": true,
