--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,11 @@ devtest = [
   'PyTest >= 7.1.2',
 ]
 
+publish = [
+  'Build >= 0.8.0',
+  'Twine >= 4.0.1',
+]
+
 
 [build-system]
 requires = [
