--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,16 @@
+# python.org/dev/peps/pep-0621
+# setuptools.pypa.io/en/latest/userguide/pyproject_config.html
+
+
 [project]
 name = 'Agent-Behavior-Model'
-version = '23.2.10'
 
-description = 'Agent Behavior Model'
+keywords = [
+  'agent',
+  'behavior', 'behaviour',
+  'model', 'modeling', 'modelling',
+]
+
 readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}
 
 requires-python = '>= 3.11'
@@ -17,37 +25,18 @@ maintainers = [
   {name = 'STEAM for Vietnam Foundation: Robotics & AI Educational Initative', email = 'Edu.Robotics@STEAMforVietnam.org'}
 ]
 
-keywords = [
-  'agent',
-  'behavior', 'behaviour',
-  'model', 'modeling', 'modelling',
-]
-classifiers = [
-  'Development Status :: 4 - Beta',
-  'Framework :: Robot Framework',
-  'Framework :: Robot Framework :: Library',
-  'Framework :: Robot Framework :: Tool',
-  'Intended Audience :: Education',
-  'Operating System :: MacOS',
-  'Operating System :: MacOS :: MacOS X',
-  'Operating System :: Microsoft :: Windows',
-  'Operating System :: POSIX :: Linux',
-  'Programming Language :: Python',
-  'Programming Language :: Python :: 3',
-  'Programming Language :: Python :: 3.11',
-  'Programming Language :: Python :: 3.12',
-  'Topic :: Education',
-  'Topic :: Scientific/Engineering',
-  'Topic :: Software Development :: Libraries :: Python Modules',
-]
 
-dependencies = [
-  'CLICK >= 8.1.3',
+dynamic = [
+  'version',
 
-  'Decorator >= 5.1.1',
-  'Wrapt >= 1.14.1',
+  'description',
 
-  'EdX-CodeJail >= 3.3.2',
+  'classifiers',
+
+  'dependencies',
+  'optional-dependencies',
+
+  'entry-points',
 ]
 
 
@@ -58,25 +47,71 @@ GitHub = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
 Repository = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
 
 
-[project.scripts]
-abm = 'abm.cli:abm_cli'
+[tool.setuptools]
+# setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
+
+# platforms = []  # array
+
+zip-safe = true
+
+# eager-resources = []  # array
+
+py-modules = []
+
+# packages = []  # array or find directive
+
+# package-dir = {}  # table/inline-table, used when explicitly listing packages
+
+# namespace-packages = []  # array, deprecated
+
+package-data = {}  # table/inline-table
+
+include-package-data = true
+
+exclude-package-data = {}  # table/inline-table
+
+license-files = ['LICEN[CS]E*']  # array of glob patterns
+
+data-files = {}  # table/inline-table, discouraged
+
+# script-files = []  # array, deprecated
+
+provides = []  # array, ignored by pip
+
+obsoletes = []  # array, ignored by pip
 
 
-[project.optional-dependencies]
-devtest = [
-  'Nose2 >= 0.12.0',
-  'PyTest >= 7.2.1',
-]
+[tool.setuptools.packages.find]
+where = ['src']
+include = ['*']
+exclude = []
+namespaces = true
 
-publish = [
-  'Build >= 0.10.0',
-  'Twine >= 4.0.2',
-]
+
+[tool.setuptools.dynamic]
+version = {file = 'metadata/version'}
+
+description = {file = 'metadata/description'}
+
+classifiers = {file = 'metadata/classifiers'}
+
+dependencies = {file = 'metadata/requirements/base.txt'}
+
+entry-points = {file = 'metadata/entry-points'}
+
+
+[tool.setuptools.dynamic.optional-dependencies]
+build = {file = 'metadata/requirements/build.txt'}
+dev = {file = 'metadata/requirements/dev.txt'}
+doc = {file = 'metadata/requirements/doc.txt'}
+lint = {file = 'metadata/requirements/lint.txt'}
+publish = {file = 'metadata/requirements/publish.txt'}
+test = {file = 'metadata/requirements/test.txt'}
 
 
 [build-system]
 requires = [
-  'SetUpTools >= 67.2.0',
+  'SetUpTools >= 67.4.0',
   'Wheel >= 0.38.4',
 ]
 build-backend = 'setuptools.build_meta'
