--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,11 @@ exclude = []
 
 
 [tool.poetry.dependencies]
-python = '>= 11, < 3.12'
+python = '>= 3.11, < 3.12'
+click = ">=8.1.3"
+decorator = ">=5.1.1"
+wrapt = ">=1.15.0"
+edx-codejail = ">=3.3.3"
 
 
 [tool.poetry.group.build]
