--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ __pycache__/
 .pytest_cache/
 .ropeproject/
 
+# Poetry
+poetry.lock
 
 # Documentation
 docs/
-
 
 # Visual Studio Code
 .vscode/*.log
