--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ authors = [
 ]
 maintainers = [
   {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'},
-  {name = 'STEAM for Vietnam Foundation: Robotics & AI Educational Initative', email = 'Edu.Robotics@STEAMforVietnam.org'}
+  {name = 'STEAM for Vietnam Foundation: AI, IoT & Robotics Educational Initative', email = 'Edu.Robotics@STEAMforVietnam.org'},
 ]
 
 
