--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ exclude = []
 
 
 [tool.poetry.dependencies]
-python = '>= 3.11, < 3.12'
+python = '^3.11'
 click = ">=8.1.3"
 decorator = ">=5.1.1"
 wrapt = ">=1.15.0"
