--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         python-version:
           - 3.11
-          # - 3.12
+          - 3.12.0-alpha
 
     steps:
       - name: Checkout Repo
