--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         python-version:
           - 3.11
-          - 3.12.0-alpha.7
+          - 3.12.0-beta.1
           # github.com/actions/python-versions/blob/main/versions-manifest.json
 
     steps:
