--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
-# python.org/dev/peps/pep-0621
-# setuptools.pypa.io/en/latest/userguide/pyproject_config.html
+# peps.python.org/pep-0621
+# packaging.python.org/en/latest/specifications/declaring-project-metadata
 
 
 [project]
+
+
+# GENERAL INFO
+# ============
+
 name = 'Agent-Behavior-Model'
 
 keywords = [
@@ -13,32 +18,51 @@ keywords = [
 
 readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}
 
-requires-python = '>= 3.11'
 
-license = {text = 'MIT'}
+# AUTHOR(S)/MAINTAINER(S) & LICENSE
+# =================================
 
 authors = [
-  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'}
+  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'},
 ]
 maintainers = [
   {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'},
   {name = 'STEAM for Vietnam Foundation: AI, IoT & Robotics Educational Initiative', email = 'Edu.Robotics@STEAMforVietnam.org'},
 ]
 
+license = {file = 'LICENSE'}
+
+
+# PYTHON VERSION REQUIREMENT
+# ==========================
+
+requires-python = '>= 3.11'
+
+
+# DYNAMIC METADATA
+# ================
 
 dynamic = [
+  # version
   'version',
 
+  # description & trove classifiers
   'description',
-
   'classifiers',
 
+  # dependencies
   'dependencies',
   'optional-dependencies',
 
+  # entry points / scripts
   'entry-points',
+  'scripts',
+  'gui-scripts',
 ]
 
+
+# URLs
+# ====
 
 [project.urls]
 Homepage = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
@@ -47,8 +71,11 @@ GitHub = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
 Repository = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
 
 
-[tool.setuptools]
+# SETUPTOOLS-SPECIFIC CONFIG
+# ==========================
 # setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
+
+[tool.setuptools]
 
 # platforms = []  # array
 
@@ -89,17 +116,21 @@ namespaces = true
 
 
 [tool.setuptools.dynamic]
+
+# version
 version = {file = 'metadata/version'}
 
+# description & trove classifiers
 description = {file = 'metadata/description'}
-
 classifiers = {file = 'metadata/classifiers'}
 
+# dependencies
 dependencies = {file = 'metadata/requirements/base.txt'}
 
+# entry points / scripts
 entry-points = {file = 'metadata/entry-points'}
 
-
+# optional depedendencies
 [tool.setuptools.dynamic.optional-dependencies]
 build = {file = 'metadata/requirements/build.txt'}
 dev = {file = 'metadata/requirements/dev.txt'}
@@ -109,9 +140,13 @@ publish = {file = 'metadata/requirements/publish.txt'}
 test = {file = 'metadata/requirements/test.txt'}
 
 
+# BUILD SYSTEM
+# (SetUpTools)
+# ============
+
 [build-system]
 requires = [
-  'SetUpTools >= 67.4.0',
-  'Wheel >= 0.38.4',
+  'SetUpTools >= 68.0.0',
+  'Wheel >= 0.40.0',
 ]
 build-backend = 'setuptools.build_meta'
