--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - 3.11
-          - 3.12.0-beta.4
+          - 3.12
+          - 3.13.0-alpha.1
           # github.com/actions/python-versions/blob/main/versions-manifest.json
 
     steps:
@@ -30,4 +30,4 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: PIP-Install Package & Dependencies
-        run: ./install-editable-dev
+        run: make install-editable
