--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ authors = [
 ]
 maintainers = [
   {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'},
-  {name = 'STEAM for Vietnam Foundation: AI, IoT & Robotics Educational Initiative', email = 'Edu.Robotics@STEAMforVietnam.org'},
+  {name = 'STEAM for Vietnam (S4V) Foundation: AI, IoT & Robotics Educational Initiative', email = 'Edu.Robotics@STEAMforVietnam.org'},
 ]
 
 license = {file = 'LICENSE'}
@@ -36,7 +36,7 @@ license = {file = 'LICENSE'}
 # PYTHON VERSION REQUIREMENT
 # ==========================
 
-requires-python = '>= 3.11'
+requires-python = '>= 3.12'
 
 
 # DYNAMIC METADATA
@@ -146,7 +146,7 @@ test = {file = 'metadata/requirements/test.txt'}
 
 [build-system]
 requires = [
-  'SetUpTools >= 68.0.0',
-  'Wheel >= 0.40.0',
+  'SetUpTools >= 68.2.2',
+  'Wheel >= 0.41.3',
 ]
 build-backend = 'setuptools.build_meta'
